[package]
name = "near-birthday-quest-v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { version = "4.1.1" }

[dev-dependencies]
near-workspaces = { version = "0.8.0", features = [ "unstable" ] }
tokio = "1"
serde_json = "1"
anyhow = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
